force-app/main/default/objects/Orgaos_Associativos__c/Orgaos_Associativos__c.object-meta.xml
<CustomObject>
    <label>Orgão Associativo</label>
    <nameField>
        <displayFormat>OS-{0000}</displayFormat>
        <label>Nome de Orgão Associativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orgãos Associativos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>