force-app/main/default/objects/Orgaos_Associativos__c/fields/Ano_Fim__c.field-meta.xml
<CustomField>
    <fullName>Ano_Fim__c</fullName>
    <label>Ano Fim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>