force-app/main/default/objects/Orgaos_Associativos__c/fields/Ano_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Ano_Inicio__c</fullName>
    <label>Ano Inicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>