force-app/main/default/objects/Orgaos_Associativos__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ORG_O__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assembleia de Representantes</fullName>
                <isActive>false</isActive>
                <label>Assembleia de Representantes</label>
            </value>
            <value>
                <fullName>Comissão de Disciplina</fullName>
            </value>
            <value>
                <fullName>Direção de Delegação</fullName>
                <isActive>false</isActive>
                <label>Direção de Delegação</label>
            </value>
            <value>
                <fullName>Mesa da Assembleia de Delegação</fullName>
                <isActive>false</isActive>
                <label>Mesa da Assembleia de Delegação</label>
            </value>
            <value>
                <fullName>Presidente</fullName>
            </value>
            <value>
                <fullName>Presidente da Mesa</fullName>
            </value>
            <value>
                <fullName>Primeiro Secretário</fullName>
            </value>
            <value>
                <fullName>Primeiro Secretário da Mesa</fullName>
            </value>
            <value>
                <fullName>Relator</fullName>
            </value>
            <value>
                <fullName>Representante</fullName>
            </value>
            <value>
                <fullName>Secretário</fullName>
            </value>
            <value>
                <fullName>Segundo Secretário</fullName>
            </value>
            <value>
                <fullName>Segundo Secretário da Mesa</fullName>
            </value>
            <value>
                <fullName>Tesoureiro</fullName>
            </value>
            <value>
                <fullName>Vice-Presidente</fullName>
            </value>
            <value>
                <fullName>Vogal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>