force-app/main/default/objects/Orgaos_Associativos__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Org_os_Sociais</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>