force-app/main/default/objects/Orgaos_Associativos__c/fields/Data_da_Suspens_o__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Suspens_o__c</fullName>
    <label>Data da Suspensão</label>
    <type>Date</type>
</CustomField>