force-app/main/default/objects/Orgaos_Associativos__c/fields/Data_de_Ren_ncia__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Ren_ncia__c</fullName>
    <label>Data de Renúncia</label>
    <type>Date</type>
</CustomField>