force-app/main/default/objects/Orgaos_Associativos__c/fields/Delega_o__c.field-meta.xml
<CustomField>
    <fullName>Delega_o__c</fullName>
    <formula>UPPER(TEXT(Contato__r.Delega_o__c))</formula>
    <label>Delegação</label>
    <type>Text</type>
</CustomField>