force-app/main/default/objects/Orgaos_Associativos__c/fields/ORG_O__c.field-meta.xml
<CustomField>
    <fullName>ORG_O__c</fullName>
    <label>Orgão</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASSEMBLEIA  DE REPRESENTANTES</fullName>
                <label>ASSEMBLEIA DE  REPRESENTANTES</label>
            </value>
            <value>
                <fullName>CONSELHO FISCAL E DE JURISDIÇÃO</fullName>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO AÇORES</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO AÇORES</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO ALGARVE</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO ALGARVE</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO AVEIRO</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO AVEIRO</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO BRAGA</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO BRAGA</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO CASTELO BRANCO</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO CASTELO BRANCO</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO COIMBRA</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO COIMBRA</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO GUARDA</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO GUARDA</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO LEIRIA</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO LEIRIA</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO LISBOA</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO LISBOA</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO PORTO</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO PORTO</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO VIANA DO CASTELO</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO VIANA DO CASTELO</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO VILA REAL</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO VILA REAL</label>
            </value>
            <value>
                <fullName>DIRECÇÃO DE DELEGAÇÃO VISEU</fullName>
                <label>DIREÇÃO DE DELEGAÇÃO VISEU</label>
            </value>
            <value>
                <fullName>DIRECÇÃO NACIONAL</fullName>
                <label>DIREÇÃO NACIONAL</label>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO AÇORES</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO ALGARVE</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO AVEIRO</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO BRAGA</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO CASTELO BRANCO</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO COIMBRA</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO GUARDA</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO LEIRIA</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO LISBOA</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO PORTO</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO VIANA DO CASTELO</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO VILA REAL</fullName>
            </value>
            <value>
                <fullName>MESA ASSEMBLEIA GERAL DELEGAÇAO VISEU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>