force-app/main/default/objects/Orgaos_Associativos__c/fields/Ren_ncia__c.field-meta.xml
<CustomField>
    <fullName>Ren_ncia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renúncia</label>
    <type>Checkbox</type>
</CustomField>