force-app/main/default/objects/Orgaos_Associativos__c/fields/Suspens_o__c.field-meta.xml
<CustomField>
    <fullName>Suspens_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspensão</label>
    <type>Checkbox</type>
</CustomField>