force-app/main/default/objects/Orgaos_Associativos__c/fields/tipo__c.field-meta.xml
<CustomField>
    <fullName>tipo__c</fullName>
    <label>tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>efetivo</fullName>
            </value>
            <value>
                <fullName>suplente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>