force-app/main/default/objects/Orgaos_Associativos__c/validationRules/Orgao_Nao_Corresponde_A_Delegacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Orgao_Nao_Corresponde_A_Delegacao</fullName>
    <active>true</active>
    <errorConditionFormula>(CONTAINS(TEXT(ORG_O__c), &apos;DELEGAÇÃO&apos;)||CONTAINS(TEXT(ORG_O__c), &apos;DELEGAÇAO&apos;)) &amp;&amp; NOT(CONTAINS(TEXT(ORG_O__c), Delega_o__c))</errorConditionFormula>
    <errorMessage>Órgão Associativo não corresponde à Delegação do contacto</errorMessage>
</ValidationRule>